*** empty log message ***

--- a/doc/src/manual/ch-sim-lib.tex
+++ b/doc/src/manual/ch-sim-lib.tex
@@ -493,7 +493,7 @@ are inserted at its head and elements are removed at its tail.
 \begin{figure}[htbp]
   \begin{center}
     \includegraphics[width=3.703in, height=1.303in]{figures/usmanFig10}
-    \caption{What is what with cQueue}
+    \caption{cQueue: insertion and removal}
     \label{fig:ch-sim-lib:cqueue}
   \end{center}
 \end{figure}
@@ -692,20 +692,18 @@ for (int i=0; i<array.items(); i++)
 }
 \end{verbatim}
 
-
-
-
-\section{Non-object container classes}
-
-There are two container classes to store non-object
-items\index{non-object container}: \cclass{cLinkedList} and
-\cclass{cBag}.  The first one parallels with \cclass{cQueue}, the
-second one with \cclass{cArray}. They can be useful if you have to
-deal with C structs or objects that are not derived from
-\cclass{cObject}.
-
-See the class library reference for more info about them.
-
+%
+% \section{Non-object container classes}
+%
+% There are two container classes to store non-object
+% items\index{non-object container}: \cclass{cLinkedList} and
+% \cclass{cBag}.  The first one parallels with \cclass{cQueue}, the
+% second one with \cclass{cArray}. They can be useful if you have to
+% deal with C structs or objects that are not derived from
+% \cclass{cObject}.
+%
+% See the class library reference for more info about them.
+%
 
 
 
